specs/blueprints/errors/parsing/missing_list_for_list_item.eno
# Parsing a list item without any previous element

-- input
- item
-- input

## ParseError

-- text
Line 1 contains a list item without a list being specified before.
-- text

-- snippet
   Line | Content
 >    1 | - item
-- snippet

selection: [0,0] => [0,6]


# Parsing a list item preceded by a line continuation

-- input
field:
| continuation
- item
-- input

## ParseError

-- text
Line 3 contains a list item without a list being specified before.
-- text

-- snippet
   Line | Content
      1 | field:
      2 | | continuation
 >    3 | - item
-- snippet

selection: [2,0] => [2,6]


# Parsing a list item preceded by a fieldset entry

-- input
fieldset:
entry = value
- item
-- input

## ParseError

-- text
Line 3 contains a list item without a list being specified before.
-- text

-- snippet
   Line | Content
      1 | fieldset:
      2 | entry = value
 >    3 | - item
-- snippet

selection: [2,0] => [2,6]